--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -22,8 +22,8 @@
         <td><%= trip.description %></td>
         <td><%= trip.fave_memory %></td>
         <td><%= trip.photo %></td>
-        <td><%= trip.city %></td>
-        <td><%= trip.user %></td>
+        <td><%= trip.city.name %></td>
+        <td><%= trip.user.username %></td>
         <td><%= link_to 'Show', trip %></td>
         <td><%= link_to 'Edit', edit_trip_path(trip) %></td>
         <td><%= link_to 'Destroy', trip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
