Testing out maps on user/trips

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -34,4 +34,20 @@
 
 <br>
 
+
+<body>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <!-- I recommend you host this file on your own, since this will change without warning -->
+  <script src="http://datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
+  <h2>insert username here</h2>
+
+
+<div id="container" style="position: relative; width: 1400px; height: 500px;"></div>
+
+<script>
+    var map = new Datamap({element: document.getElementById('container')});
+</script>
+
+
 <%= link_to 'New Trip', new_trip_path %>
