--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link href="css/agency.css" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- <link href="css/agency.css" rel="stylesheet"> -->
+<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
