--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
-"wanderlust."
+<body class="welcome-body">
 <%= link_to('Login', login_path) %>
 <%= link_to('Sign Up', new_user_path) %>
+</body>
+
