Adds users favorite travel quote to database

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -41,6 +41,7 @@
   <!-- I recommend you host this file on your own, since this will change without warning -->
   <script src="http://datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
   <h2><%= @user.username %></h2>
+  <h3><%= @user.fave_travel_quote %></h3>
 
 
 <div id="container" style="position: relative; width: 1400px; height: 500px;"></div>
