adds working trip map, and returns user country data

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -10,5 +10,11 @@
   <%= @country.continent %>
 </p>
 
+  <strong>Trips:</strong>
+  <% @country.trips.each do |trip| %>
+  <%= trip.trip_name %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_country_path(@country) %> |
 <%= link_to 'Back', countries_path %>
