--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -27,13 +27,9 @@
 
 <p>
   <strong>City:</strong>
-  <%= @trip.city %>
+  <%= @trip.city.name %>
 </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @trip.user %>
-</p>
 
 <%= link_to 'Edit', edit_trip_path(@trip) %> |
 <%= link_to 'Back', trips_path %>
