--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -32,4 +32,4 @@
 
 
 <%= link_to 'Edit', edit_trip_path(@trip) %> |
-<%= link_to 'Back', trips_path %>
+<%= link_to 'Back', user_trips_path(current_user) %>
