--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -31,14 +31,18 @@
     <%= f.label :photo %><br>
     <%= f.text_field :photo %>
   </div>
-  <div class="field">
-    <%= f.label :city_id %><br>
-    <%= f.text_field :city_id %>
+    <div class="field">
+    <%= f.label :country_name %><br>
+    <%= f.text_field :country_name %>
   </div>
-  <div class="field">
+    <div class="field">
+    <%= f.label :city_name %><br>
+    <%= f.text_field :city_name %>
+  </div>
+<!--   <div class="field">
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
-  </div>
+  </div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
