--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -1,3 +1,22 @@
-// Place all the styles related to the Trips controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.modal-container {
+          display: none;
+          position: fixed;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(94,110,141,0.9);
+          /*-webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s; */
+          z-index: 2;
+        }
+          .modal-content {
+          position: relative;
+          width: 90%;
+          height: 500px;
+          margin: 2em auto;
+          border-radius: .25em .25em .4em .4em;
+          background-color: #fff;
+          box-shadow: 0 0 20px rgba(0,0,0,0.2);
+          /*-webkit-transform: translateY(-40px);
+          -webkit-transition-duration: 0.3s; */
+      }
