--- a/app/views/countries/_trips.html.erb
+++ b/app/views/countries/_trips.html.erb
@@ -1,3 +1,3 @@
 <% @trips.each do |trip| %>
-  <%= link_to(trip.trip_name, trip_path(trip)) %>
+  <%= link_to(trip.trip_name, trip_path(trip), :class => 'trips', :remote => true) %>
 <% end %>
