--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -5,25 +5,9 @@
 <div id="container" style="position: relative; width: 1400px; height: 500px;"></div>
 <div id="trip-data"></div>
 
-<!-- //   var map = new Datamap({
-//     element: document.getElementById('container'),
-//     fills: {
-//             defaultFill: 'rgba(0,0,0,0.6)'
-//   },
-//   done: function(datamap) {
-//         datamap.svg.selectAll('.datamaps-subunit').on('click', function(geography) {
-//           // var userId = $('h2').data().id;
-//           var countryName = geography.properties.name;
-//           $.get("/countries/" + countryName, function (data){
-//             console.log('data available.');
-//           })
 
-//         });
-//   }
-//   });
-//
- -->
-<%= link_to 'New Trip', new_trip_path %>
+
+<%= link_to 'New Trip', new_trip_path, :id => 'new-trip' %>
 <%= link_to("Logout", session_path, method: :delete) %>
 
 
