--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -7,7 +7,7 @@
 
 
 
-<%= link_to 'New Trip', new_trip_path, :id => 'new-trip' %>
+<%= link_to 'New Trip', new_trip_path, :id => 'new-trip', :remote => true %>
 <%= link_to("Logout", session_path, method: :delete) %>
 
 
