--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -7,7 +7,9 @@ body {
   position: relative;
   z-index: 1;
 }
-
+* {
+  -webkit-box-sizing: border-box;
+}
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -54,6 +56,7 @@ div {
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+
   h2 {
     text-align: left;
     font-weight: bold;
@@ -68,4 +71,49 @@ div {
     font-size: 12px;
     list-style: square;
   }
+}
+
+#new-trip-form{
+  height: 214px;
+  width: 400px;
+  border: 1px solid black;
+  position: absolute;
+  top: 30%;
+  left: 35%;
+  background-color: white;
+  display: none;
+
+}
+
+#new_trip input, .edit_trip input{
+  width: 100%;
+  border: 0;
+  border-bottom: 1px solid black;
+  outline: 0;
+}
+
+.trip-form-content{
+  margin-bottom: 1em;
+}
+
+.trip-form-content .field{
+  width: 50%;
+  padding-right: 1%;
+  float: left;
+}
+
+#new_trip{
+  width: 400px;
+  text-align: center;
+}
+#trip_description {
+  outline: 0  ;
+  border: 0;
+  border-bottom: 1px solid black;
+  margin-bottom: 1em;
+  width: 100%;
+}
+
+.edit_trip{
+  width: 100%;
 }
