--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,11 +19,16 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+    <div class="field">
+    <%= f.label :fave_travel_quote %><br>
+    <%= f.text_field :fave_travel_quote %>
+  </div>
   <div class="field">
-    <%= f.label :password_digest %><br>
-    <%= f.text_field :password_digest %>
+    <%= f.label :password %><br>
+    <%= f.password_field :password, :value => nil %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
