--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
 <!-- <link href="css/agency.css" rel="stylesheet"> -->
 <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
   <script src="http://d3js.org/d3.v3.min.js"></script>
