--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -8,8 +8,11 @@
 <div id="container" style="position: relative; width: 1400px; height: 500px;"></div>
 <div id="new-trip-link">
 <%= link_to 'New Trip', new_trip_path, :id => 'new-trip', :remote => true %>
+<%= link_to 'Add Country to Wishlist', wishlists_new_path, :id => 'add-to-wishlist', :remote => true %>
 </div>
-<div id="trip-data"></div>
+<div id="trip-data">
+
+</div>
 
 
 
