--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -6,6 +6,12 @@
 
 
 <div id="container" style="position: relative; width: 1400px; height: 500px;"></div>
+<div id="map-key">
+  Trips:<br/>
+  <img src ="http://i58.tinypic.com/md398m.png">
+  <br/><br/>
+  Wishlist Countries: <img src="http://i60.tinypic.com/5xpkj8.png">
+</div>
 <div id="new-trip-link">
 <%= link_to 'New Trip', new_trip_path, :id => 'new-trip', :remote => true %>
 <%= link_to 'Add Country to Wishlist', wishlists_new_path, :id => 'add-to-wishlist', :remote => true %>
