--- a/app/views/trips/_tripinfo.html.erb
+++ b/app/views/trips/_tripinfo.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>City:</strong>
+  <%= @trip.city_name %>
+</p>
+
+<p>
   <strong>Trip date:</strong>
   <%= @trip.trip_date %>
 </p>
@@ -22,13 +27,9 @@
 
 <p>
   <strong>Photo:</strong>
-  <%= @trip.photo %>
+  <img src=" <%= @trip.photo %>">
 </p>
 
-<p>
-  <strong>City:</strong>
-  <%= @trip.city_name %>
-</p>
 
 <%= link_to 'Edit', edit_trip_path(@trip), :remote => true %>
 
