--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -7,10 +7,10 @@
 
 <div id="container" style="position: relative; width: 1400px; height: 500px;"></div>
 <div id="map-key">
-  Trips:<br/>
+  <p id="small-p">Trips:</p>
   <img src ="http://i58.tinypic.com/md398m.png">
   <br/><br/>
-  Wishlist Countries: <img src="http://i60.tinypic.com/5xpkj8.png">
+  <p id="small-p">Wishlist Countries:</p> <img src="http://i60.tinypic.com/5xpkj8.png">
 </div>
 <div id="new-trip-link">
 <%= link_to 'New Trip', new_trip_path, :id => 'new-trip', :remote => true %>
