--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <!-- <link href="css/agency.css" rel="stylesheet"> -->
 <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
@@ -23,7 +24,7 @@
 <body>
   <div class="modal-container">
     <div class="modal-content">
-      <a href="#" id="close-modal">Close</a>
+      <a href="#" id="close-modal"><i class="fa fa-times"></i></a>
       <div id="map-modal"></div>
     </div>
   </div>
