--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,7 +1,9 @@
   <header>
   <h2 data-id="<%= @user.id %>"><%= @user.username %></h2>
   <h3><%= @user.fave_travel_quote %></h3>
-  <%= link_to("Logout", session_path, id: 'logout', method: :delete) %>
+  <%= link_to session_path, id: 'logout', method: :delete do %>
+  <i class="fa fa-sign-out fa-2x"></i>
+  <% end %>
 </header>
 
 
@@ -13,8 +15,12 @@
   <p id="small-p">Wishlist Countries:</p> <img src="http://i60.tinypic.com/5xpkj8.png">
 </div>
 <div id="new-trip-link">
-<%= link_to 'New Trip', new_trip_path, :id => 'new-trip', :remote => true %>
-<%= link_to 'Add Country to Wishlist', wishlists_new_path, :id => 'add-to-wishlist', :remote => true %>
+<%= link_to new_trip_path, :id => 'new-trip', :remote => true do %>
+  <i class="fa fa-heart fa-2x"></i>
+<% end %>
+<%= link_to wishlists_new_path, :id => 'add-to-wishlist', :remote => true do %>
+<i class="fa fa-plus fa-2x"></i>
+<% end %>
 </div>
 <div id="trip-data">
 
