--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <body class="welcome-body">
-  <%= link_to('Login', login_path) %>
-  <%= link_to('Sign Up', new_user_path) %>
+  <div id="welcome-buttons">
+  <button><a id="black" href="<%= login_path %>">LOGIN.</a></button>
+  <button><a id="black" href="<%= new_user_path %>">SIGN UP.</a></button>
+</div>
 </body>
-
