--- a/app/views/trips/_tripinfo.html.erb
+++ b/app/views/trips/_tripinfo.html.erb
@@ -25,9 +25,9 @@
 
 
 <img width="300" height="250" src=" <%= @trip.photo %>">
-<br/>
+</br>
 
-<%= link_to (edit_trip_path(@trip), :remote => true) do %>
+<%= link_to edit_trip_path(@trip), :remote => true do %>
 <i class="fa fa-pencil fa-2x"></i>
 <% end %>
 
