--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -8,11 +8,16 @@
 
 
 <div id="container" style="position: relative; width: 1400px; height: 500px;"></div>
+
+
+
+
 <div id="map-key">
   <p id="small-p">Trips:</p>
-  <img src ="http://i58.tinypic.com/md398m.png">
-  <br/><br/>
-  <p id="small-p">Wishlist Countries:</p> <img src="http://i60.tinypic.com/5xpkj8.png">
+ <div id="trip-key-color"></div>
+  <br/>
+  <p id="small-p">Wishlist Countries:</p>
+  <div id="wish-key-color"></div>
 </div>
 <div id="new-trip-link">
 <%= link_to new_trip_path, :id => 'new-trip', :remote => true do %>
@@ -22,9 +27,7 @@
 <i class="fa fa-heart fa-2x"></i>
 <% end %>
 </div>
-<div id="trip-data">
-
-</div>
+<div id="trip-data"></div>
 
 
 
